# evict

./: GEMINI.md  README.md  implementation.md
artifacts/exports/: Evidence-Conditioned LLM Investigation for Static-Analysis Alert Triage.docx  evict_paper_writing_prompt.md  juliet_evict_results_deepseek_llm:7b_summary.md  juliet_evict_results_gemini_2_5_flash_lite_summary.md  juliet_evict_results_gpt_4o_mini_20260428_115713_summary.md  juliet_evict_results_gpt_4o_mini_summary.md  juliet_evict_results_spotbugs_gemini_2_5_flash_lite.csv  juliet_evict_results_spotbugs_gemini_2_5_flash_lite_summary.md  juliet_evict_results_spotbugs_gpt_4o.csv  juliet_evict_results_spotbugs_gpt_4o_mini.csv  juliet_sampled_results.csv  (+4 more)
evict_pipeline/: README.md  evaluate.py  pyproject.toml  test1.md
evict_pipeline/demo_data/: JulietCWE22.java  JulietCWE78.java  JulietCWE89.java  juliet_alerts.sarif
evict_pipeline/src/evict_pipeline/: __init__.py  calibrator.py  escalator.py  extractor.py  models.py  pipeline.py  verifier.py
evict_pipeline/src/evict_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
evict_pipeline/tests/: test_pipeline.py
scripts/: analyze_juliet_performance.py  benchmark_cwe_bench.py  benchmark_juliet_sampling.py  generate_figures.py  generate_full_juliet_sarif.sh  generate_mini_benchmark.sh  generate_paper_csv.py  generate_paper_table.py  generate_sarifs.sh  run_full_cwe_bench.sh  run_juliet_poc.py  setup_cwe_bench.sh  setup_juliet_pmd.sh  setup_juliet_spotbugs.sh  todo.py
tests/: sample_codeql.sarif  test_extractor_codeql.py
(+11 files in other folders)
